# ocaml-cpu

./: .gitignore  alu.ml  arithmetique.ml  circuit.ml  cpu.ml  draw.ml  dune  dune-project  logique.ml  memory.ml  run_cpu.ml
_build/: .db  .digest-db  log
_build/default/: alu.cma  alu.ml  arithmetique.cma  arithmetique.ml  circuit.cma  circuit.mli  cpu.cma  draw.ml  libdraw.cma  libdraw.ml  logique.cma  logique.ml  memory.cma  test_alu.bc  test_arithmetique.bc  test_logique.bc  test_memory.bc
_build/default/.alu.objs/byte/: alu.cmi  alu.cmo  alu.cmt
_build/default/.alu.objs/native/: alu.cmx
_build/default/.arithmetique.objs/byte/: arithmetique.cmi  arithmetique.cmo  arithmetique.cmt
_build/default/.arithmetique.objs/native/: arithmetique.cmx
_build/default/.circuit.objs/byte/: circuit.cmi  circuit.cmo  circuit.cmt  circuit.cmti
_build/default/.circuit.objs/native/: circuit.cmx
_build/default/.cpu.objs/byte/: cpu.cmi  cpu.cmo  cpu.cmt
_build/default/.cpu.objs/native/: cpu.cmx
_build/default/.draw.eobjs/byte/: dune__exe__Draw.cmi  dune__exe__Draw.cmo  dune__exe__Draw.cmt
_build/default/.draw.eobjs/native/: dune__exe__Draw.cmx
_build/default/.dune/: configurator  configurator.v2
_build/default/.libdraw.objs/byte/: libdraw.cmi  (+2 more)
_build/default/.merlin-conf/: exe-draw  exe-run_cpu  exe-test_alu  exe-test_arithmetique  exe-test_logique  exe-test_memory  lib-alu  lib-arithmetique  lib-circuit  lib-cpu  lib-libdraw  lib-logique  lib-memory
_build/default/tests/: test_alu.ml  test_logique.ml
tests/: test_arithmetique.ml  test_cpu.ml  test_memory.ml
(+26 files in other folders)
