(include_subdirs unqualified)

(library
  (name circuit)
  (modules circuit)
  (libraries unix)
)
(library
  (name logique)
  (modules logique)
  (libraries circuit)
 )
(library
  (name arithmetique)
  (modules arithmetique)
  (libraries circuit logique)
 )
(library
  (name alu)
  (modules alu)
  (libraries circuit logique arithmetique)
 )
(library
  (name memory)
  (modules memory)
  (libraries circuit logique arithmetique)
)
(library
  (name cpu)
  (modules cpu)
  (libraries circuit logique arithmetique alu memory)
)
; (test
;   (name test_logique)
;   (modules test_logique)
;   (libraries circuit logique arithmetique alu memory)
; )
; (test
;   (name test_arithmetique)
;   (modules test_arithmetique)
;   (libraries circuit logique arithmetique alu memory)
; )
; (test
;   (name test_alu)
;   (modules test_alu)
;   (libraries circuit logique arithmetique alu memory)
; )
; (test
;   (name test_memory)
;   (modules test_memory)
;   (libraries circuit logique arithmetique alu memory)
; )
(test
  (name test_cpu)
  (modules test_cpu)
  (libraries circuit logique arithmetique alu memory cpu)
)
(executable
  (name run_cpu)
  (modules run_cpu)
  (libraries circuit logique arithmetique alu memory cpu)
)

(library
  (name libdraw)
  (modules libdraw)
  (libraries circuit)
)
(executable
  (name draw)
  (modules draw)
  (promote (until-clean))
  (libraries circuit logique arithmetique alu memory cpu libdraw)
)
(rule
 (alias draw)
 (action (run ./draw.exe))
)